# xailyser

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: release.yml
client/: Cargo.toml  build.rs
client/locales/: English.json  Ukrainian.json
client/src/: app.rs  commands.rs  config.rs  context.rs  core.rs  errors.rs  logging.rs  main.rs  net.rs  profiles.rs  ui.rs  ws.rs
client/src/communication/: heartbeat.rs  request.rs  response.rs
client/src/net/: device.rs  heartbeat.rs  inspector.rs  lookup.rs  raw.rs  speed.rs
client/src/ui/: app.rs  auth.rs  components.rs  menu.rs  modals.rs  root.rs  styles.rs  tabs.rs  themes.rs  windows.rs
client/src/ui/components/: auth.rs  connection_profiles.rs  menu.rs  preauth_client_settings.rs  root.rs  settings.rs  status.rs  throughput_settings.rs
client/src/ui/modals/: connection_profiles.rs  device.rs  message.rs
client/src/ui/tabs/: about.rs  inspector.rs  settings.rs  settings_client.rs  settings_server.rs  stats.rs  status.rs
client/src/ui/windows/: main.rs  message.rs
client/src/utils/: ui.rs
client/src/websocket/: core.rs  thread.rs
client/src/ws/: data.rs  request.rs  response.rs
common/: Cargo.toml
common/src/: auth.rs  channel.rs  commands.rs  compression.rs  cryptography.rs  io.rs  lib.rs  logging.rs  messages.rs
common/src/logging/: error.rs
dpi/: Cargo.toml
dpi/resources/: iana-port-service-database.csv
dpi/src/: error.rs  frame.rs  lib.rs  metadata.rs  parser.rs  protocols.rs  utils.rs  wrapper.rs
dpi/src/analysis/: ports.rs  vendor.rs
dpi/src/dto/: frame.rs  metadata.rs
dpi/src/protocols/: arp.rs  dhcpv4.rs  dhcpv6.rs  dns.rs  ethernet.rs  http.rs  icmpv4.rs  icmpv6.rs  ipv4.rs  ipv6.rs  tcp.rs  udp.rs
dpi/src/protocols/arp/: hardware_type.rs  operation.rs
dpi/src/protocols/ethernet/: ether_type.rs  mac.rs
dpi/src/protocols/ip/: address.rs  protocol.rs
dpi/src/protocols/ipv4/: address.rs  protocol.rs
lib/: Packet.lib  wpcap.lib
resources/: iana-port-service-database.csv  oui-database.txt
scripts/: start.ps1  start.sh
server/: Cargo.toml  build.rs
server/src/: channels.rs  commands.rs  config.rs  context.rs  core.rs  logging.rs  main.rs  net.rs  tcp.rs  ws.rs
server/src/errors/: log.rs
server/src/net/: interface.rs
server/src/request/: commands.rs  core.rs
server/src/websocket/: thread.rs
