[package]
name = "xailyser-client"
version = "0.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]

edition = "2021"
rust-version = "1.84.1"

categories = ["network-programming"]
keywords = ["networking", "routers", "monitoring"]

readme = "../README.md"
license = "GPL-3"
repository = "https://github.com/xairaven/xailyser"

[dependencies]
xailyser-common = { path = "../common" }

chrono = "0.4.39"
crossbeam = "0.8.4"
directories = "6.0.0"
egui = "0.31.0"
egui-aesthetix = { path = "../egui-aesthetix", features = ["all_themes"]}
eframe = { version = "0.31.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
] }
fern = "0.7.1"
http = "1.2.0"
log = "0.4.25"
rand = "0.9.0"
semver = "1.0.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.11"
toml = "0.8.20"
tungstenite = "0.26.1"
