[package]
name = "client"
version = "1.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
build = "build.rs"

edition = "2024"
rust-version = "1.87"

categories = ["network-programming"]
keywords = ["networking", "routers", "monitoring"]

readme = "../README.md"
license = "GPL-3"
repository = "https://github.com/xairaven/xailyser"

[dependencies]
common = { path = "../common" }
dpi = { path = "../dpi" }

chrono = "0.4.41"
crossbeam = "0.8.4"
egui = "0.31.1"
egui-aesthetix = { git="https://github.com/thebashpotato/egui-aesthetix.git", rev="c26c1dd543819fc46bfebe4cb1f42ee84ed14416", features = ["all_themes"]}
egui_plot = "0.32.1"
eframe = { version = "0.31.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
] }
fern = "0.7.1"
http = "1.3.1"
log = "0.4.27"
pcap = "2.2.0"
rand = "0.9.1"
rfd = "0.15.3"
rust-i18n = "3.1.5"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
toml = "0.8.23"
tungstenite = "0.27.0"
