[package]
name = "xailyser-common"
version = "0.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]

edition = "2024"
rust-version = "1.85"

categories = ["network-programming"]
keywords = ["networking", "routers", "monitoring"]

readme = "../README.md"
license = "GPL-3"
repository = "https://github.com/xairaven/xailyser"

[dependencies]
chrono = "0.4.40"
hex = "0.4.3"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "2.0.12"