[package]
name = "common"
version = "1.0.0"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]

edition = "2024"
rust-version = "1.87"

categories = ["network-programming"]
keywords = ["networking", "routers", "monitoring"]

readme = "../README.md"
license = "GPL-3"
repository = "https://github.com/xairaven/xailyser"

[dependencies]
dpi = { path = "../dpi" }

chrono = "0.4.41"
crossbeam = "0.8.4"
directories = "6.0.0"
flate2 = { version = "1.1.2", features = ["zlib-rs"], default-features = false }
hex = "0.4.3"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.12"