[package]
name = "dpi"
version = "0.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
build = "build.rs"

edition = "2024"
rust-version = "1.86"

categories = ["network-programming"]
keywords = ["networking", "routers", "monitoring"]

readme = "../README.md"
license = "GPL-3"
repository = "https://github.com/xairaven/xailyser"

[dependencies]
csv = "1.3.1"
libc = "0.2.172"
pcap = "2.2.0"
hex = "0.4.3"
num_enum = { version = "0.7.3", features = ["complex-expressions"] }
nom = "8.0.0"
radix-tree = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
