[package]
name = "server"
version = "0.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
build = "build.rs"

edition = "2024"
rust-version = "1.86"

categories = ["network-programming"]
keywords = ["networking", "routers", "monitoring"]

readme = "../README.md"
license = "GPL-3"
repository = "https://github.com/xairaven/xailyser"

[dependencies]
common = { path = "../common" }

bytes = "1.10.1"
crossbeam = "0.8.4"
ctrlc = "3.4.6"
fern = "0.7.1"
log = "0.4.27"
pnet = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.8.20"
tungstenite = "0.26.2"
